refactor: use left join fetch