@@ -4,7 +4,9 @@ import com.akimi.issue_tracking.problem.Problem;
 import com.akimi.issue_tracking.problem.engineer.Patch;
 import lombok.Getter;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 public class ProblemWithPatches {
@@ -15,8 +17,8 @@ public class ProblemWithPatches {
     public ProblemWithPatches(Problem problem) {
         this.problem = problem;
         this.patches = problem.getProblemSolvers().stream()
-                              .flatMap(ps -> ps.getPatches().stream())
-                              .toList();
+                .flatMap(ps -> ps.getPatches().stream())
+                .collect(Collectors.toList());
     }
 
 }
